# model_deploy_execution_attack_for_pipeline

./: .gitignore  CMakeLists.txt  README.md  filter_hook_config.py
hook_config/: age_googlenet_mnn_hook_config.json  emotion_ferplus_mnn_hook_config.json  face_analysis_cli_hook_config.json  fsanet_headpose_mnn_hook_config.json  gender_googlenet_mnn_hook_config.json  libInspireFace.so_address_hook_config.json  libanc_faceid.so_hook_config.json  liveness_example_hook_config.json  mnist_mnn_hook_config.json  pfld_landmarks_mnn_hook_config.json  ssrnet_age_mnn_hook_config.json  ultraface_detector_mnn_hook_config.json  yolov5_detector_mnn_hook_config.json
pre_attack_scripts/: generate_face_analysis_false_list.sh  generate_false_image_list.sh
resources/execution_files/: age_googlenet_mnn  emotion_ferplus_mnn  face_analysis_cli  fsanet_headpose_mnn  gender_googlenet_mnn  pfld_landmarks_tflite  ssrnet_age_mnn  ultraface_detector_mnn  yolov5_detector_mnn
resources/false_image_list/: spoof_faces.txt
scripts/: debug_with_gdb.sh  install_dependencies.sh  run_automated_attack.sh  run_face_analysis_attack.sh  run_full_pipeline.sh
sdk_coverage_reports/: Arcsoft_SDK_coverage.csv  Biometric_SensorTech_SDK_coverage.csv  Facepp_SDK_coverage.csv  SenseTime_SDK_coverage.csv  brand_sdk_adoption_summary.csv  brand_sdk_crosstab_appendix.csv  rc_analysis.xlsx  sdk_analysis.csv  verify_sdk_analysis.py
src/attackers/: gdb_script_host.py  nes_attack_targetless.py  nes_attack_targetless_logistic.py  run_gdb_host.sh
