cmake_minimum_required(VERSION 3.10)
project(mnist_attack_tool CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenCV REQUIRED)
if(NOT OpenCV_FOUND)
    message(FATAL_ERROR "OpenCV not found!")
endif()
message(STATUS "Found OpenCV: ${OpenCV_LIBS}")
set(CMAKE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
include(cmake/mnn.cmake)
add_executable(mnist_mnn_console mnist_mnn_console.cpp)
target_link_libraries(mnist_mnn_console PRIVATE MNN::MNN ${OpenCV_LIBS})
message(STATUS "CMake configuration finished.")
